--- a/contrib/debian/examples/sherlockholmescoin.conf
+++ b/contrib/debian/examples/sherlockholmescoin.conf
@@ -1,9 +1,9 @@
-# bitcoin.conf configuration file. Lines beginning with # are comments.
+# sherlockholmescoin.conf configuration file. Lines beginning with # are comments.
 
 
 # Network-related settings:
 
-# Run on the test network instead of the real bitcoin network.
+# Run on the test network instead of the real sherlockholmescoin network.
 testnet=1
 
 # Connect via a socks4 proxy
@@ -22,9 +22,9 @@ testnet=1
 #maxconnections=
 
 
-# JSON-RPC options (for controlling a running Bitcoin/bitcoind process)
+# JSON-RPC options (for controlling a running sherlockholmescoin/sherlockholmescoind process)
 
-# server=1 tells Bitcoin to accept JSON-RPC commands.
+# server=1 tells sherlockholmescoin to accept JSON-RPC commands.
 server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
@@ -40,12 +40,12 @@ server=1
 # Listen for RPC connections on this TCP port:
 rpcport=55883
 
-# You can use Bitcoin or bitcoind to send commands to Bitcoin/bitcoind
+# You can use sherlockholmescoin or sherlockholmescoind to send commands to Bitcoin/bitcoind
 # running on another host using this option:
 rpcconnect=127.0.0.1
 
 # Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate
-# with Bitcoin -server or bitcoind
+# with sherlockholmescoin -server or sherlockholmescoind
 #rpcssl=1
 
 # OpenSSL settings used when rpcssl=1
@@ -56,17 +56,17 @@ rpcsslprivatekeyfile=server.pem
 
 # Miscellaneous options
 
-# Set gen=1 to attempt to generate bitcoins
-gen=0
+# Set gen=1 to attempt to generate sherlockholmescoins
+gen=1
 
-# Use SSE instructions to try to generate bitcoins faster.
+# Use SSE instructions to try to generate sherlockholmescoins faster.
 #4way=1
 
 # Pre-generate this many public/private key pairs, so wallet backups will be valid for
 # both prior transactions and several dozen future transactions.
 keypool=100
 
-# Pay an optional transaction fee every time you send bitcoins.  Transactions with fees
+# Pay an optional transaction fee every time you send sherlockholmescoins.  Transactions with fees
 # are more likely than free transactions to be included in generated blocks, so may
 # be validated sooner.
 paytxfee=0.00
@@ -77,7 +77,7 @@ paytxfee=0.00
 
 # User interface options
 
-# Start Bitcoin minimized
+# Start sherlockholmescoin minimized
 #min=1
 
 # Minimize to the system tray
